# CrosswordServer

./: LICENSE  README.md  main.cpp  meson.build
gtk/: ServerControlWindow.h
openapi/: crosswords.yml
openapi/server/: README.md
openapi/server/.openapi-generator/: FILES
openapi/server/api/: DefaultApi.cpp  DefaultApi.h
openapi/server/model/: Cell.cpp  Cell.h  CellLetter.cpp  CellLetter.h  CellLetter_allOf.cpp  CellLetter_allOf.h  CellQuestions.cpp  CellQuestions.h  CellQuestions_allOf.cpp  CellQuestions_allOf.h  Crossword.cpp  Crossword.h  Crossword_content_inner_inner.cpp  Crossword_content_inner_inner.h  Question.cpp  Question.h  helpers.h
server/: CrosswordExample.h  CustomLogger.h
